kubernetes/apps/network/external-services/wan-failover/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: &app wan-failover
  labels:
    app.kubernetes.io/name: *app
    app.kubernetes.io/instance: *app
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 80
